--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="black"></div>
       <div class="title__block">
         <div class="title__text">
-          <div class="text__name">Hello, I'm <br /> Khasanov <br /> Kamil</div>
+          <div class="text__name">Hello, I'm <br /> Khasanov Kamil</div>
           <div class="text__whoAmI">Web developer</div>
         </div>
         <div class="title__btn">
