--- a/index.html
+++ b/index.html
@@ -43,14 +43,15 @@
       </div>
       <div class="nav__menu">
         <div class="nav__burger-menu">
-          <a href="" class="burger-menu__links">About Me</a>
-          <a href="" class="burger-menu__links">Works</a>
-          <a href="" class="burger-menu__links">Contacts</a>
+          <p  class="burger-menu__links l1">Обо мне</p>
+          <p  class="burger-menu__links l2">Услуги</p>
+          <p  class="burger-menu__links l3">Умения</p>
+          <p  class="burger-menu__links l4">Контакты</p>
         </div>
       </div>
     </nav>
   <div class="about">
-    <div class="about__inner">
+    <div class=" container about__inner">
       <div class="about__title">ABOUT ME</div>
       <div class="about__line"></div>
       <div class="about__img"><img src="img/profil.jpg" alt="profil" /></div>
@@ -58,35 +59,47 @@
     </div>
   </div>
   <div class="services">
-    <div class="services__inner">
+    <div class="container services__inner">
       <div class="services__title">MY SERVICES</div>
       <div class="services__line"></div>
-      <div class="services__section">
+      <div class="services__container">
+        <div class="services__item">
          <div class="services__icon"><img src="svg/1.svg" alt="" /></div>
          <div class="services__subtitle">Веб разработка</div>
          <div class="services__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque voluptates reprehenderit accusamus et amet? Modi voluptatum deserunt obcaecati mollitia rerum, nisi dolores maxime impedit nihil, distinctio, recusandae sapiente odit deleniti.</div>
       </div>
-      <div class="services__section">
+      <div class="services__item">
          <div class="services__icon"><img src="svg/2.svg" alt="" /></div>
          <div class="services__subtitle">Back-end разработка</div>
          <div class="services__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque voluptates reprehenderit accusamus et amet? Modi voluptatum deserunt obcaecati mollitia rerum, nisi dolores maxime impedit nihil, distinctio, recusandae sapiente odit deleniti.</div>
       </div>
+      </div>
     </div>
-    
   </div>
   <div class="skills">
-    <div class="skills__inner">
+    <div class="container skills__inner">
       <div class="skills__title">MY SKILLS</div>
       <div class="skills__line"></div>
-      <div class="skills__gHTML"></div>
-      <div class="skills__gCSS"></div>
-      <div class="skills__gJS"></div>
-      <div class="skills__gPHP"></div>
+      <div class="skills__container">
+           <div class="skills__item">
+        <div class="skills__gHTML"></div>
+      </div>
+      <div class="skills__item">
+         <div class="skills__gCSS"></div>
+      </div>
+      <div class="skills__item">
+         <div class="skills__gJS"></div>
+      </div>
+      <div class="skills__item">
+        <div class="skills__gPHP"></div>
+      </div>
+      </div>
+   
     </div>
   </div>
   <div class="contact">
     <div class="contact__blue"></div>
-    <div class="contact__inner">
+    <div class="container contact__inner">
       <div class="contact__title">CONTACT ME</div>
       <div class="contact__line"></div>
       <div class="contact__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In commodi, asperiores nemo neque suscipit nobis tempore. Reprehenderit nihil corrupti rerum ipsum quis. Vel inventore laudantium facilis consectetur nostrum, corporis nihil.</div>
