--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </div>
   </div>
   <div class="skills">
-    <div class="container skills__inner">
+    <div class="skills__inner">
       <div class="skills__title">MY SKILLS</div>
       <div class="skills__line"></div>
       <div class="skills__container">
