--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>HTML</title>
+  <title>Хасанов Камиль – Веб разработчик / Front–end & Back–end программист</title>
   <!-- HTML -->
   <!-- Custom Styles -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,11 +20,11 @@
       <div class="black"></div>
       <div class="title__block">
         <div class="title__text">
-          <div class="text__name">Hello, I'm <br /> Khasanov Kamil</div>
-          <div class="text__whoAmI">Web developer</div>
+          <div class="text__name">Привет, я <br /> Хасанов Камильl</div>
+          <div class="text__whoAmI">Front–end & Back–end <br />программист</div>
         </div>
         <div class="title__btn">
-          <button class="btn__aboutMe" type="button">About Me</button>
+          <button class="btn__aboutMe" type="button">Обо мне</button>
         </div>
       </div>
     </div>
@@ -33,7 +33,7 @@
   <nav class="nav">
       <div class="nav__bgc">
           <div class="nav__inner">
-        <div class="nav__name">Khasanov Kamil</div>
+        <div class="nav__name">Хасанов Камиль</div>
         <div class="nav__btn">
           <div class="btn-1"></div>
           <div class="btn-2"></div>
@@ -52,33 +52,35 @@
     </nav>
   <div class="about">
     <div class=" container about__inner">
-      <div class="about__title">ABOUT ME</div>
+      <div class="about__title">Обо мне</div>
       <div class="about__line"></div>
       <div class="about__img"><img src="img/profil.jpg" alt="profil" /></div>
-      <div class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus eius a porro eveniet dolor distinctio, dolores hic, illum quisquam officiis provident sequi beatae cupiditate itaque reprehenderit repellat enim tempore magnam.5</div>
+      <div class="about__text">Меня зовут Хасанов Камиль, мне 18 лет. Я являюсь Web-разработчиком (Front-end and Back-end). Имею больше года опыта в области программирования и вёрстки сайтов. За всё это время успел изучить HTML5, CSS3, JS ES6, PHP, различные их фреймворки и библиотеки.</div>
+      <div class="about__text">Занимаюсь написанием различных сайтов(от одностраничных лендингов до многостраничных блогов), также разрабатываю серверную часть сайтов и Веб приложений, применяя серверный язык программирования PHP и базу данных MySQL.</div>
+      <div class="about__text">В верстке использую компонентный подход и методологию БЭМ. Верстаю адаптивно и кроссбраузерно, учитываю правила семантичности и доступности.</div>
     </div>
   </div>
   <div class="services">
     <div class="container services__inner">
-      <div class="services__title">MY SERVICES</div>
+      <div class="services__title">Мои услуги</div>
       <div class="services__line"></div>
       <div class="services__container">
         <div class="services__item">
          <div class="services__icon"><img src="svg/1.svg" alt="" /></div>
          <div class="services__subtitle">Веб разработка</div>
-         <div class="services__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque voluptates reprehenderit accusamus et amet? Modi voluptatum deserunt obcaecati mollitia rerum, nisi dolores maxime impedit nihil, distinctio, recusandae sapiente odit deleniti.</div>
+         <div class="services__text">Написание сайтов любой сложности, от одностраничных лендингов до многостраничных блогов, применяя адаптивность под любые виды устройств и кроссбраузерность</div>
       </div>
       <div class="services__item">
          <div class="services__icon"><img src="svg/2.svg" alt="" /></div>
          <div class="services__subtitle">Back-end разработка</div>
-         <div class="services__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque voluptates reprehenderit accusamus et amet? Modi voluptatum deserunt obcaecati mollitia rerum, nisi dolores maxime impedit nihil, distinctio, recusandae sapiente odit deleniti.</div>
+         <div class="services__text">Разработка серверной части сайтов и Веб приложений, применяя ЯП PHP и MySQL</div>
       </div>
       </div>
     </div>
   </div>
   <div class="skills">
-    <div class="skills__inner">
-      <div class="skills__title">MY SKILLS</div>
+    <div class="container skills__inner">
+      <div class="skills__title">Мои умение</div>
       <div class="skills__line"></div>
       <div class="skills__container">
            <div class="skills__item">
@@ -100,9 +102,9 @@
   <div class="contact">
     <div class="contact__blue"></div>
     <div class="container contact__inner">
-      <div class="contact__title">CONTACT ME</div>
+      <div class="contact__title">Контакты</div>
       <div class="contact__line"></div>
-      <div class="contact__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In commodi, asperiores nemo neque suscipit nobis tempore. Reprehenderit nihil corrupti rerum ipsum quis. Vel inventore laudantium facilis consectetur nostrum, corporis nihil.</div>
+      <div class="contact__text">Контакты для связи со мной:</div>
       <div class="contact__main">
          <a href="mailto:bada9889@gmail.com" class="contact__section">
            <div class="contact__icon svg"><img src="svg/3.svg" alt="email"></div>
