--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class=" container about__inner">
       <div class="about__title">Обо мне</div>
       <div class="about__line"></div>
-      <div class="about__img"><img src="img/profil.jpg" alt="profil" /></div>
+      <div class="about__img"><!-- <img src="img/profil2.jpg" alt="profil" /> --></div>
       <div class="about__text">Меня зовут Хасанов Камиль, мне 18 лет. Я являюсь Web-разработчиком (Front-end and Back-end). Имею больше года опыта в области программирования и вёрстки сайтов. За всё это время успел изучить HTML5, CSS3, JS ES6, PHP, различные их фреймворки и библиотеки.</div>
       <div class="about__text">Занимаюсь написанием различных сайтов(от одностраничных лендингов до многостраничных блогов), также разрабатываю серверную часть сайтов и Веб приложений, применяя серверный язык программирования PHP и базу данных MySQL.</div>
       <div class="about__text">В верстке использую компонентный подход и методологию БЭМ. Верстаю адаптивно и кроссбраузерно, учитываю правила семантичности и доступности.</div>
@@ -78,6 +78,7 @@
       </div>
     </div>
   </div>
+  
   <div class="skills">
     <div class="container skills__inner">
       <div class="skills__title">Мои умение</div>
