--- a/index.html
+++ b/index.html
@@ -50,9 +50,18 @@
     </nav>
   <div class="about">
     <div class=" container about__inner">
-      <div class="about__title">Обо мне</div>
-      <div class="about__line"></div>
+      <div class="about__title title-text">Обо мне</div>
+      <div class="about__line line"></div>
       <div class="about__img"></div>
+      <div class="card">
+        <div class="card__title">
+          <div class="card__title-text">info</div>
+          <div class="card__closed">×</div>
+        </div>
+        <div class="card__info">
+          <div class="card__info-text">Выполнено достижение: найти посхалку</div>
+        </div>
+      </div>
       <div class="about__text">Меня зовут Хасанов Камиль, мне 18 лет. Я являюсь Web-разработчиком (Front-end and Back-end). Имею больше года опыта в области программирования и вёрстки сайтов. За всё это время успел изучить HTML5, CSS3, JS ES6, PHP, различные их фреймворки и библиотеки.</div>
       <div class="about__text">Занимаюсь написанием различных сайтов(от одностраничных лендингов до многостраничных блогов), также разрабатываю серверную часть сайтов и Веб приложений, применяя серверный язык программирования PHP и базу данных MySQL.</div>
       <div class="about__text">В верстке использую компонентный подход и методологию БЭМ. Верстаю адаптивно и кроссбраузерно, учитываю правила семантичности и доступности.</div>
@@ -60,8 +69,8 @@
   </div>
   <div class="services">
     <div class="container services__inner">
-      <div class="services__title">Мои услуги</div>
-      <div class="services__line"></div>
+      <div class="services__title title-text">Мои услуги</div>
+      <div class="services__line line"></div>
       <div class="services__container">
         <div class="services__item">
          <div class="services__icon"><img src="svg/1.svg" alt="" /></div>
@@ -78,8 +87,8 @@
   </div>
   <div class="skills">
     <div class="container skills__inner">
-      <div class="skills__title">Мои умение</div>
-      <div class="skills__line"></div>
+      <div class="skills__title title-text">Мои умение</div>
+      <div class="skills__line line"></div>
       <div class="skills__container">
            <div class="skills__item">
         <div class="skills__gHTML"></div>
@@ -100,8 +109,8 @@
   <div class="contact">
     <div class="contact__blue"></div>
     <div class="container contact__inner">
-      <div class="contact__title">Контакты</div>
-      <div class="contact__line"></div>
+      <div class="contact__title title-text">Контакты</div>
+      <div class="contact__line line"></div>
       <div class="contact__text">Контакты для связи со мной:</div>
       <div class="contact__main">
          <a href="mailto:bada9889@gmail.com" class="contact__section">
