--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
   <title>Хасанов Камиль – Веб разработчик / Front–end & Back–end программист</title>
   <!-- HTML -->
   <!-- Custom Styles -->
+  <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="img/favicon/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="img/favicon/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="img/favicon/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="img/favicon/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="img/favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="img/favicon/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -63,7 +80,7 @@
         </div>
       </div>
       <div class="about__text">Меня зовут Хасанов Камиль, мне 18 лет. Я являюсь Web-разработчиком (Front-end and Back-end). Имею больше года опыта в области программирования и вёрстки сайтов. За всё это время успел изучить HTML5, CSS3, JS ES6, PHP, различные их фреймворки и библиотеки.</div>
-      <div class="about__text">Занимаюсь написанием различных сайтов(от одностраничных лендингов до многостраничных блогов), также разрабатываю серверную часть сайтов и Веб приложений, применяя серверный язык программирования PHP и базу данных MySQL.</div>
+      <div class="about__text">Занимаюсь написанием различных сайтов от одностраничных лендингов до многостраничных блогов, а также разрабатываю серверную часть сайтов и Веб приложений, применяя серверный язык программирования PHP и базу данных MySQL.</div>
       <div class="about__text">В верстке использую компонентный подход и методологию БЭМ. Верстаю адаптивно и кроссбраузерно, учитываю правила семантичности и доступности.</div>
     </div>
   </div>
@@ -75,7 +92,7 @@
         <div class="services__item">
          <div class="services__icon"><img src="svg/1.svg" alt="" /></div>
          <div class="services__subtitle">Веб разработка</div>
-         <div class="services__text">Написание сайтов любой сложности, от одностраничных лендингов до многостраничных блогов, применяя адаптивность под любые виды устройств и кроссбраузерность</div>
+         <div class="services__text">Написание сайтов любой сложности от одностраничных лендингов до многостраничных блогов, применяя адаптивность под любые виды устройств и кроссбраузерность</div>
       </div>
       <div class="services__item">
          <div class="services__icon"><img src="svg/2.svg" alt="" /></div>
