--- a/index.html
+++ b/index.html
@@ -8,6 +8,30 @@
   <title>Хасанов Камиль – Веб разработчик / Front–end & Back–end программист</title>
   <!-- HTML -->
   <!-- Custom Styles -->
+  <!-- ==============seo=========== -->
+  <meta name="description" content="Web разработка (Front-end & Back-end). Написание сайтов любой сложности / разработка серверной части сайтов и Web приложений">
+  <meta name="keywords" content="Хасанов Камиль, Khasanov Kamil, разработка сайтов, вёрстка, HTML, CSS, JS, PHP, личный сайт, программист">
+  <meta name="author" content="Khasanov Kamil">
+  <meta name="image" content="img/favicon/icon.png ">
+
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Хасанов Камиль - web разработчик / Front-end & Back-end программист">
+  <meta property="og:description" content="Web разработка (Front-end & Back-end). Написание сайтов любой сложности / разработка серверной части сайтов и Web приложений">
+  <meta property="og:image" content="/img/favicon/icon.png">
+  <meta property="og:url" content="https://kamilkhasanov.github.io">
+    
+  <link rel="canonical" href="https://khasanov-kamil.github.io">
+
+  <link rel="preconnect" href="//fonts.gstatic.com">
+  <link rel="preconnect" href="//cdnjs.cloudflare.com">
+  <link rel="preconnect" href="//google-analytics.com">
+
+  <meta name="apple-mobile-web-app-title" content="Web разработчик">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+
+  <meta name="format-detection" content="telephone=no">
+  <meta name="format-detection" content="address=no">
+  <!-- ==============icon=========== -->
   <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-icon-72x72.png">
@@ -25,6 +49,8 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
+  
+  
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
