--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   <meta property="og:title" content="Хасанов Камиль - web разработчик / Front-end & Back-end программист">
   <meta property="og:description" content="Web разработка (Front-end & Back-end). Написание сайтов любой сложности / разработка серверной части сайтов и Web приложений">
   <meta property="og:image" content="/img/favicon/icon.png">
-  <meta property="og:url" content="https://kamilkhasanov.github.io">
+  <meta property="og:url" content="https://khasanov-kamil.github.io/my_site/">
     
-  <link rel="canonical" href="https://khasanov-kamil.github.io">
+  <link rel="canonical" href="https://khasanov-kamil.github.io/my_site/">
 
   <link rel="preconnect" href="//fonts.gstatic.com">
   <link rel="preconnect" href="//cdnjs.cloudflare.com">
