--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <!-- HTML -->
   <!-- Custom Styles -->
   <!-- ==============seo=========== -->
+  <meta name="google-site-verification" content="5ol-KC_zktTs2mixGhJPgBqyKxU4BnwdBhblbIKjRuM" />
   <meta name="description" content="Web разработка (Front-end & Back-end). Написание сайтов любой сложности / разработка серверной части сайтов и Web приложений">
   <meta name="keywords" content="Хасанов Камиль, Khasanov Kamil, разработка сайтов, вёрстка, HTML, CSS, JS, PHP, личный сайт, программист">
   <meta name="author" content="Khasanov Kamil">
