--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
@@ -63,8 +63,8 @@
       <div class="black"></div>
       <div class="title__block">
         <div class="title__text">
-          <div class="text__name">Привет, я <br /> Хасанов Камильl</div>
-          <div class="text__whoAmI">Front–end & Back–end <br />программист</div>
+          <div ><h1 class="text__name">Привет, я <br /> Хасанов Камильl</h1></div>
+          <div ><h2 class="text__whoAmI">Front–end & Back–end <br />программист</h2></div>
         </div>
         <div class="title__btn">
           <button class="btn__aboutMe" type="button">Обо мне</button>
@@ -157,12 +157,16 @@
       <div class="contact__line line"></div>
       <div class="contact__text">Контакты для связи со мной:</div>
       <div class="contact__main">
+        <a href="#" class="contact__section">
+           <div class="contact__icon svg"><img src="svg/7.svg" alt="place"></div>
+           <div class="contact__address">Россия, Елабуга</div>
+         </a>
          <a href="mailto:bada9889@gmail.com" class="contact__section">
            <div class="contact__icon svg"><img src="svg/3.svg" alt="email"></div>
            <div class="contact__address">Bada9889@gmail.com</div>
          </a>
          <a href="tel:+79518901566" class="contact__section">
-           <div class="contact__icon"><img src="svg/4.svg" alt="email"></div>
+           <div class="contact__icon"><img src="svg/4.svg" alt="number phone"></div>
            <div class="contact__address">+7 (951) 890-15-66</div>
          </a>
       </div>
