--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <meta name="description" content="Web разработка (Front-end & Back-end). Написание сайтов любой сложности / разработка серверной части сайтов и Web приложений">
   <meta name="keywords" content="Хасанов Камиль, Khasanov Kamil, разработка сайтов, вёрстка, HTML, CSS, JS, PHP, личный сайт, программист">
   <meta name="author" content="Khasanov Kamil">
-  <meta name="image" content="img/favicon/icon.png ">
+  <meta name="image" content="img/favicon/icon.png">
 
   <meta property="og:type" content="website">
   <meta property="og:title" content="Хасанов Камиль - web разработчик / Front-end & Back-end программист">
   <meta property="og:description" content="Web разработка (Front-end & Back-end). Написание сайтов любой сложности / разработка серверной части сайтов и Web приложений">
-  <meta property="og:image" content="/img/favicon/icon.png">
+  <meta property="og:image" content="img/favicon/icon.png">
   <meta property="og:url" content="https://khasanov-kamil.github.io/my_site/">
     
   <link rel="canonical" href="https://khasanov-kamil.github.io/my_site/">
