--- a/index.html
+++ b/index.html
@@ -129,6 +129,19 @@
       </div>
     </div>
   </div>
+  <div class="work">
+    <div class="container work__inner">
+      <div class="work__title title-text">Мои работы</div>
+      <div class="work__line line"></div>
+      <div class="work__row">
+        <div class="work__item">
+          <div class="work__subtitle">Строительство домов</div>
+          <div class="work__img ibg"><img src="img/3.jpeg" alt="" /></div>
+          <button  class="work__button"><a href="">Просмотр работы</a></button>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="skills">
     <div class="container skills__inner">
       <div class="skills__title title-text">Мои умение</div>
@@ -184,6 +197,7 @@
   
   
   <script src="https://cdn.jsdelivr.net/npm/apexcharts"> </script>
+  <script src="ibg.js"></script>
   <script src="main.js"></script>
 </body>
 
