--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         <div class="nav__burger-menu">
           <p  class="burger-menu__links l1">Обо мне</p>
           <p  class="burger-menu__links l2">Услуги</p>
+          <p  class="burger-menu__links l5">Мои работы</p>
           <p  class="burger-menu__links l3">Умения</p>
           <p  class="burger-menu__links l4">Контакты</p>
         </div>
