--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       <div class="work__row">
         <div class="work__item">
           <div class="work__subtitle">Строительство домов</div>
-          <div class="work__img ibg"><img src="img/3.jpeg" alt="" /></div>
+          <img class="work__img" src="img/3.jpeg" alt="work" />
           <button  class="work__button"><a href="">Просмотр работы</a></button>
         </div>
       </div>
