--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <div class="work__item">
           <div class="work__subtitle">Строительство домов</div>
           <img class="work__img" src="img/3.jpeg" alt="work" />
-          <button  class="work__button"><a href="">Просмотр работы</a></button>
+          <button  class="work__button"><a href="https://khasanov-kamil.github.io/build/">Просмотр работы</a></button>
         </div>
       </div>
     </div>
