--- a/index.html
+++ b/index.html
@@ -139,6 +139,11 @@
           <img class="work__img" src="img/3.jpeg" alt="work" />
           <button  class="work__button"><a href="https://khasanov-kamil.github.io/build/">Просмотр работы</a></button>
         </div>
+        <div class="work__item">
+          <div class="work__subtitle">Исследовательский центр</div>
+          <img class="work__img" src="img/4.jpeg" alt="work" />
+          <button class="work__button"><a href="https://khasanov-kamil.github.io/Space/">Просмотр работы</a></button>
+        </div>
       </div>
     </div>
   </div>
