--- a/index.html
+++ b/index.html
@@ -144,6 +144,11 @@
           <img class="work__img" src="img/4.jpeg" alt="work" />
           <button class="work__button"><a href="https://khasanov-kamil.github.io/Space/">Просмотр работы</a></button>
         </div>
+        <div class="work__item">
+          <div class="work__subtitle">Авто Audi R8</div>
+          <img class="work__img" src="img/5.jpeg" alt="work" />
+          <button class="work__button"><a href="https://khasanov-kamil.github.io/Audi_R8/">Просмотр работы</a></button>
+        </div>
       </div>
     </div>
   </div>
