--- a/index.html
+++ b/index.html
@@ -187,13 +187,13 @@
            <div class="contact__icon svg"><img src="svg/3.svg" alt="email"></div>
            <div class="contact__address">Bada9889@gmail.com</div>
          </a>
-         <a href="tel:+79518901566" class="contact__section">
+         <a href="tel:+79969052455" class="contact__section">
            <div class="contact__icon"><img src="svg/4.svg" alt="number phone"></div>
-           <div class="contact__address">+7 (951) 890-15-66</div>
+           <div class="contact__address">+7 (996) 905-24-55</div>
          </a>
       </div>
       <div class="contact__link">
-        <a href="https://telegram.me/khasanov_kamil"><img src="svg/5.svg" alt="" /></a>
+        <a href="https://t.me/i_kamilchik"><img src="svg/5.svg" alt="" /></a>
         <a href="https://vk.com/meningioma"><img src="svg/6.svg" alt=""></a>
       </div>
     </div>
